2005-12-08  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Offset.pm (invert): Add invert method

	* lib/Astro/Coords/Angle.pm (negate): Add negate method

	* lib/Astro/Coords/Offset.pm (clone): Add clone method

	* lib/Astro/Coords/Angle.pm (clone): Add clone method

	* lib/Astro/Coords/Offset.pm: Add DIRECT offset projection to match PTCS

2005-12-05  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Offset.pm (posang): Add posang() method.

2005-10-28  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm (datetime_is_unsafe): Implement caching
	scheme for static dates. datetime_is_unsafe() method is required
	if the datetime object is to be tweaked externally. Large speed
	improvements.

2005-10-21  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm (vbary): Add support for Barycentric velocities.

2005-08-24  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Equatorial.pm (set_vel_pars): Add ability to
	set the velocity parameters after object construction (but not in
	base class)

2005-08-06  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Fixed.pm: Override default meridian_time and
	transit_el calculations for fixed sources.

	* lib/Astro/Coords.pm (status): Allow meridian time and transit
	elevation to be undef.

2005-07-30  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm (calculate): Fix missing DateTime check in
	the "calculate" method.

2005-07-08  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* lib/Astro/Coords.pm (distance): Factor out RA/Dec lookup when
	calculating distance to reduce number of calls to radec() by 50%.
	
2005-05-20  Tim Jenness  <timj@jach.hawaii.edu>

	* lib/Astro/Coords.pm: Pre-create a DateTime::TimeZone object
	rather than using a 'UTC' string. This improves performance when
	using many calls to the datetime method.

2005-04-06  Tim Jenness  <timj@jach.hawaii.edu>

	* lib/Astro/Coords/Elements.pm (apparent): Include the target name