@@ -1,3 +1,8 @@
+2006-01-09  Tim Jenness  <tjenness@cpan.org>
+
+	* lib/Astro/Coords/Offset.pm (new): Allow for case-insensitive keys in constructor.
+	Allow "Az/El" to be a synonym for AZEL.
+
 2005-12-08  Tim Jenness  <tjenness@cpan.org>
 
 	* lib/Astro/Coords/Offset.pm (invert): Add invert method
